--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0-alpha.5",
   "type": "module",
   "devDependencies": {
-    "@tobyg74/tiktok-api-dl": "1.0.13",
     "bun-types": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -12,6 +11,6 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "dev": "bun run ./api/main.ts"
+    "dev": "bun run ./api/index.ts"
   }
 }
