--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bun-vercel",
-  "version": "1.0.0-alpha.5",
+  "name": "bun-sample",
+  "version": "1.0.0",
   "type": "module",
   "devDependencies": {
     "bun-types": "^1.0.2",
